# processing-chain

./: .dockerignore  .gitignore  CHANGES  CONTRIBUTORS.md  DEVELOPERS.md  Dockerfile  Dockerfile_k8s  Dockerfile_k8s_arm64  Dockerfile_k8s_gpu  README.md  nvenc_k8s_test.yaml  p00_processAll.py  p01_generateSegments.py  p02_generateMetadata.py  p03_generateAvPvs.py  p04_generateCpvs.py  pyproject.toml  release.sh  requirements.txt  requirements_short.txt
bitmovin_settings/: input_details.yaml  keyfile.txt  output_details.yaml
docker/: README.md  install_ffmpeg.sh  install_ffmpeg_gpu.sh  x264-snapshot-20170202-2245-stable.tar.bz2
lib/: check_requirements.py  cmd_utils.py  downloader.py  ffmpeg.py  get_framesize.py  log.py  parse_args.py  test_config.py
test/: build_and_test.sh
util/: SRC_analysis.py  clean_logs.sh  complexity_classification.py  plot_config_long.py  plot_config_short.py
util/complexityAnalysis/: complexity_classification.csv  complexity_classification_validation.csv
