[tool.poetry]
name = "processing-chain"
version = "1.0.0"
description = ""
authors = ["Werner Robitza <werner.robitza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bufferer = "0.13"
pandas = "^1.1.2"
ffmpeg-normalize = "^1.20.1"
pyyaml = "^5.3.1"
youtube_dl = "^2020.9.6"
tabulate = "^0.8.7"
paramiko = "^2.7.2"
idna = "^2.10"
urllib3 = "^1.25.10"
bitmovin-python = {git = "https://github.com/bitmovin/bitmovin-python.git", rev = "v1.21.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
