[tool.poetry]
name = "processing-chain"
version = "1.0.0"
description = ""
authors = ["Werner Robitza <werner.robitza@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
bufferer = "0.13"
pandas = "^2.2.2"
ffmpeg-normalize = "^1.28.3"
pyyaml = "^6.0.2"
youtube_dl = "^2021.12.17"
tabulate = "^0.9.0"
paramiko = "^3.4.1"
idna = "^3.8"
urllib3 = "^2.2.2"
bitmovin-python = {git = "https://github.com/bitmovin/bitmovin-python.git", rev = "v1.21.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
